theme/mindcrack/assets/stylesheets/style.scss
/* ... */
// Generic
h1.section-heading {
	text-transform: uppercase;
	color: $mc-blue;
}

h1.main {
	color: $mc-blue;
}

*::selection {
	background-color: HotPink;
	color: white;
}

a {
	font-weight: 500;
}

.important-link {
	font-size: 1.125rem;
	text-transform: uppercase;
	font-weight: bold;
	margin-bottom: $headings-margin-bottom;
	display: inline-block;
}

hr.bold {
	border-top: 0.625rem solid $hr-border-color;
	margin-bottom: 1.5625rem;
	margin-top: 0.5625rem;
	border-color: $mc-blue-faint;
}

hr {
	margin-top: 0;
}

.detail {
	.detail-label {
		font-weight: bold;
	}
}

.no-thumb {
	position: relative;
	display: block;
	height: 0;
	padding: 0;
	overflow: hidden;
	background-size: cover;

	&.no-thumb-16x9 {padding-bottom: percentage(9 / 16); @include at2x('../images/news_thumbnail', 'jpg', $dyn_size: cover);}
	&.no-thumb-square {padding-bottom: 100%; @include at2x('../images/square_thumbnail', 'jpg', $dyn_size: cover);}
}

.pager, .pagination,  {
	margin-top:0;
	margin-bottom:1rem;
	vertical-align: middle; // Removes weird spacing
}

h1.section-heading + .nav-pagination.news {
	ul {
		margin-bottom:1.5rem;
	}
}

.news-list + .nav-pagination.news {
	ul {
		margin-top:0.5rem;
	}
}




p.no-content {
	font-weight: bold;
	font-size: 1.25rem;
}

// Sticky Footer Setup (with dynamic height)
html,
body { height: 100%; }

body {
  display: table;
  width: 100%;
}

.row-expandable {
	display: table-row;
	height: 100%;
}

.row-sticky {
	display: table-row;
	height: 1px;	
}

// Generic navbar style.
nav.navbar
{
	background-color: none;
	padding-bottom:1rem;
	padding-top:0;
	padding-left:0;
	padding-right:0;

 	ul.nav {
 		padding-top: 0.2rem;
 		
 		// keep the margins even on all nav items (for when it moves to multiple lines)
 		li.nav-item {
			margin-right: 1rem;
			margin-left: 0;
			a {font-weight: normal;}

			&.active {
				a {font-weight: 500;}
			}
 		}

 		li.nav-item a{
 			text-transform: uppercase;
 			padding-top:0;
 			padding-bottom:0;
 		}
 	}
}

// Header
header#main-header 
{
	padding-top: 13.33333vw;
	position: relative;
	z-index: 0;

	// cut the top padding at the xL breakpoint to prevent the header from becoming too tall.
	@include media-breakpoint-up(xl) {
		padding-top: 10rem;
	}


	// Move background details to :before to keep the other menu elements from being affected
	&:before {
		content: "";
    	position: absolute;
    	left: 0;
    	top: 0;
  		z-index: -1;
  		display: block;
  		width:100%;
  		height:100%;

		background-image: url('../images/mindcrack_header.jpg');

		// Need to fix for some microsoft browsers
		background-image: linear-gradient(to bottom, rgba(0,0,0,0.0) 20%, rgba(0,0,0,0.95) 85%),
						  url('../images/mindcrack_header.jpg'); 

		// When the screen is super small, the logo moves up and becomes less readable, this darkens it
		@include media-breakpoint-down(sm) {
			background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.95) 75%),
				url('../images/mindcrack_header.jpg'); 
	 	}

	 	@include media-breakpoint-down(xs) {
			background-image: linear-gradient(to bottom, rgba(0,0,0,0.1) 0%, rgba(0,0,0,1.0) 65%),
				url('../images/mindcrack_header.jpg'); 
	 	}

	 	// Scale the background with the size of the header (may need to look into compatibility)
		background-size: cover;
		background-position: 50% 14%;
	}


	nav {
		padding-top: 0.5rem;
	 	a.navbar-brand {
	 		background-image: url('../images/logo_header.svg');
	 		height: 4.3125rem;
	 		width: 15.5rem;
	 		background-size: contain;
	 		background-repeat: no-repeat;
	 		@include text-hide();

	 		// Scale down the logo at super small mobile sizes
	 		max-width: 100%;
	 		max-height: calc((100vw - 4rem) / 4.0579710);

	 		@include media-breakpoint-up(xl) {
	 			width: 18rem;
	 		}
	 	}

	 	ul.nav {
	 		padding-top: 0;
	 		li.nav-item {
	 			margin-right: 0;
 				margin-left: 1rem;
 				text-shadow: 0 0 3em rgba(0,0,0,1.0);
 			}

	 		@include media-breakpoint-up(lg) {
	 			@include pull-right;
	 			padding-top: 0.75rem;
	 		}

	 		// mix-in for media-break-point-down(sm) not accurate enough, used to move menu items into a different alignment for small sizes
	 		@media (max-width: 47.99rem) {
	 			@include pull-left;
	 			margin-top: -1rem;
	 			margin-left: 2rem;
	 		}
	 	}
	}
}

footer#main-footer {
	@extend .row-sticky;
	color: $mc-white;
	background-color: $mc-grey-textured-background;
	@include at2x('../images/footer-bg', 'jpg', $dyn_size: cover);
	background-size:cover;
	background-position: center;

	.container {
		padding-top: 1rem;
		padding-bottom: 1rem;
	}

	.copyright {
		margin-top: 2rem;
		font-size: 1.375rem;
		color: $mc-grey;

		.footer_logo {
			@include text-hide();
			background-image: url('../images/logo_footer.svg');
			width: 11.125rem;
			vertical-align: middle;
			height: 2.59375rem;
			display: inline-block;
			top: 1rem;
		}
	}

	.credits {
		color: $mc-grey;
		font-size: 0.85rem;
		p {
			margin-bottom: 0.25rem;
		}
		a,a:hover,a:active {
			color: $mc-grey-faint;
		}
	}
}

// Main Content
section#main-content {
	>.container {
		padding-top: 2rem;
		padding-bottom: 1rem;
	}
}

.cal-month {
	font-size: 1.5rem;
	font-weight: bold;
}

.cal-event-details {
	@include make-col();
	@include make-col-span(12);
	p {
		margin-bottom:0.25rem;
		&:last-child {margin-bottom: 1rem}
	}
}

.cal-event-map {
	@include make-col();
	@include make-col-span(12);
	margin-bottom: 1rem;
}

@include media-breakpoint-up(lg) {

	.row.with-map .cal-event-details {
		
		@include make-col-span(6);
	}

	.row.with-map .cal-event-map {
		
		@include make-col-span(6);
	}
}
/* ... */

